##########################################################################
# os
##########################################################################
file(GLOB SRC_LIST *.cpp)

add_library(os STATIC ${SRC_LIST})
add_library(${PROJECT_NAME}::os ALIAS os)

##########################################################################
# Link
##########################################################################
target_link_libraries(os)
