[package]
name = "appmesh"
version = "0.1.3"
edition = "2021"
description = "AppMesh SDK for Rust"
license = "MIT"
authors = ["laoshanxi"]
repository = "https://github.com/laoshanxi/app-mesh"
documentation = "https://github.com/laoshanxi/app-mesh/tree/main/docs"
readme = "README.md"
keywords = ["appmesh", "sdk", "microservices", "in-memory-computing"]
categories = ["api-bindings", "network-programming"]

[lib]
name = "appmesh"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13.1", features = [
    "json",
    "cookies",
    "multipart",
    "query",
] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4"
url = "2.5"
cookie = "0.18"
rmp-serde = "1.1"
native-tls = "0.2"
byteorder = "1.4"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
hostname = "0.4"
http = "1.3"
bytes = "1.10.1"
async-trait = "0.1.89"
encoding_rs = "0.8.35"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.31"
serde_bytes = "0.11.19"

[dev-dependencies]
mockito = "1.7"
tokio = { version = "1.47", features = ["full"] }
serde_json = "1.0"
env_logger = "0.11"
tempfile = "3.23.0"
